feat(frontend): visualizar lista de tareas en el componente y diseño básico

--- a/TaskManager.Frontend/src/app/modules/task-manager/components/task-item/task-item.component.html
+++ b/TaskManager.Frontend/src/app/modules/task-manager/components/task-item/task-item.component.html
@@ -1,1 +1,12 @@
-<p>task-item works!</p>
+<div class="check-container">
+  <input type="checkbox" name="" id="">
+</div>
+
+<div class="text-container">
+  <h2>{{tarea.titulo}}</h2>
+  <p>{{tarea.descripcion}}</p>
+</div>
+
+<div class="options-container">
+  <button type="button">...</button>
+</div>
