--- a/TaskManager.Frontend/src/app/modules/task-manager/components/task-list/task-list.component.html
+++ b/TaskManager.Frontend/src/app/modules/task-manager/components/task-list/task-list.component.html
@@ -1,1 +1,3 @@
-<p>task-list works!</p>
+<section *ngIf="(tareas$ | async) as tareas">
+  <Task-Item *ngFor="let tarea of tareas" [tarea]="tarea"></Task-Item>
+</section>
