style(frontend): modificar ligeramente el módulo Auth y agregar nuevas fuentes para el diseño global

--- a/TaskManager.Frontend/src/app/modules/auth/pages/login/login.component.html
+++ b/TaskManager.Frontend/src/app/modules/auth/pages/login/login.component.html
@@ -16,6 +16,8 @@
   </div>
 </form>
 
+<p>¿No tienes una cuenta? Por favor, <a routerLink="/auth/register">regístrate aquí.</a></p>
+
 <div class="error-message" *ngIf="errorMessage !== ''">
   {{errorMessage}}
 </div>
