--- a/TaskManager.Frontend/src/app/modules/auth/pages/login/login.component.scss
+++ b/TaskManager.Frontend/src/app/modules/auth/pages/login/login.component.scss
@@ -2,9 +2,11 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  width: 50%;
+  width: 30%;
   margin: 4rem auto;
   padding: 2rem;
+  border-radius: 0.3rem;
+  box-shadow: 0 3px 6px rgba($color: #000000, $alpha: .2);
 
   .title {
     text-align: center;
@@ -23,25 +25,50 @@
 
       input {
         width: 100%;
+        padding: 0.5rem;
+        border: 1px solid lightgray;
+        border-radius: 0.3rem;
       }
 
       .btn-submit {
         display: block;
         width: initial;
-        margin: auto;
+        margin: 0.5rem auto;
         padding: 0.5rem 1.5rem;
         cursor: pointer;
       }
     }
   }
 
+  p {
+    text-align: center;
+  }
+
   .error-message {
     text-align: center;
     color: crimson;
   }
-  
+
   .success-message {
     text-align: center;
     color: green;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  :host {
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  :host {
+    width: 70%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  :host {
+    width: 90%;
   }
 }
