--- a/TaskManager.Frontend/src/styles.scss
+++ b/TaskManager.Frontend/src/styles.scss
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,700;1,500;1,700&family=Roboto:ital,wght@0,400;0,500;1,400;1,500&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -14,4 +16,17 @@ body {
 body {
   display: flex;
   flex-direction: column;
+  font-family: 'Roboto', sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+label,
+button,
+input[type="submit"] {
+  font-family: 'Poppins', sans-serif;
 }
