--- a/TaskManager.Frontend/src/app/modules/task-manager/components/task-item/task-item.component.html
+++ b/TaskManager.Frontend/src/app/modules/task-manager/components/task-item/task-item.component.html
@@ -1,5 +1,5 @@
 <div class="check-container">
-  <input type="checkbox" name="" id="">
+  <input type="checkbox" id="tarea-switch" (change)="checkInput()" [checked]="isComplete">
 </div>
 
 <div class="text-container">
