feat(frontend): filtrar tareas según su estado

--- a/TaskManager.Frontend/src/app/modules/task-manager/task-manager.component.html
+++ b/TaskManager.Frontend/src/app/modules/task-manager/task-manager.component.html
@@ -18,9 +18,9 @@
 </form>
 
 <div class="btn-container">
-  <button type="button">Todas</button>
-  <button type="button">Pendientes</button>
-  <button type="button">Completadas</button>
+  <button type="button" (click)="setFlitro($event)" value="Todas">Todas</button>
+  <button type="button" (click)="setFlitro($event)" value="Pendiente">Pendiente</button>
+  <button type="button" (click)="setFlitro($event)" value="Completada">Completada</button>
 </div>
 
 <Task-List></Task-List>
