--- a/TaskManager.Frontend/src/app/modules/task-manager/components/task-list/task-list.component.html
+++ b/TaskManager.Frontend/src/app/modules/task-manager/components/task-list/task-list.component.html
@@ -1,3 +1,3 @@
 <section *ngIf="(tareas$ | async) as tareas">
-  <Task-Item *ngFor="let tarea of tareas" [tarea]="tarea"></Task-Item>
+  <Task-Item *ngFor="let tarea of tareas | filtroTareas: filtro" [tarea]="tarea"></Task-Item>
 </section>
