--- a/TaskManager.Frontend/src/app/modules/task-manager/components/task-item/task-item.component.scss
+++ b/TaskManager.Frontend/src/app/modules/task-manager/components/task-item/task-item.component.scss
@@ -1,14 +1,23 @@
 :host {
   display: flex;
   flex: 1 1 0;
-  gap: 0.5rem;
+  gap: 0.75rem;
   align-items: center;
   margin: 0.25rem;
-  padding: 0.25rem;
+  padding: 0.5rem 1rem;
   border-radius: 0.3rem;
   box-shadow: 0 1px 2px rgba($color: #000000, $alpha: .2);
 
   .text-container {
     width: 100%;
+  }
+
+  .options-container {
+    button {
+      padding: 0.5rem;
+      border: none;
+      background-color: transparent;
+      cursor: pointer;
+    }
   }
 }
